@@ -1,59 +1,72 @@
+/*
+ * Copyright 2024 the original author Hoàng Anh Tiến.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      https://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package com.ezbuy.settingservice.repositoryTemplate;
 
-import com.ezbuy.framework.constants.CommonErrorCode;
-import com.ezbuy.framework.exception.BusinessException;
-import com.ezbuy.framework.repository.BaseTemplateRepository;
-import com.ezbuy.framework.utils.DataUtil;
-import com.ezbuy.framework.utils.SQLUtils;
-import com.ezbuy.framework.utils.SortingUtils;
 import com.ezbuy.settingmodel.dto.ContentDisplayDTO;
 import com.ezbuy.settingmodel.model.ContentDisplay;
 import com.ezbuy.settingmodel.request.ComponentPageRequest;
+import io.hoangtien2k3.commons.constants.CommonErrorCode;
+import io.hoangtien2k3.commons.exception.BusinessException;
+import io.hoangtien2k3.commons.repository.BaseTemplateRepository;
+import io.hoangtien2k3.commons.utils.DataUtil;
+import io.hoangtien2k3.commons.utils.SQLUtils;
+import io.hoangtien2k3.commons.utils.SortingUtils;
+
+import java.math.BigDecimal;
+import java.util.*;
+import java.util.stream.Collectors;
+
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Repository;
 import org.springframework.util.CollectionUtils;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 
-import java.math.BigDecimal;
-import java.util.*;
-import java.util.stream.Collectors;
-
 @Repository
 @RequiredArgsConstructor
-public class ContentDisplayRepositoryTemplateImpl extends BaseTemplateRepository implements ContentDisplayRepositoryTemplate {
+public class ContentDisplayRepositoryTemplateImpl extends BaseTemplateRepository
+        implements ContentDisplayRepositoryTemplate {
     @Override
     public Mono<List<ContentDisplayDTO>> getAllByPageId(String pageId) {
         Map<String, Object> params = new HashMap<>();
-        StringBuilder query = new StringBuilder();
-        query.append(" with recursive n as (\n")
-                .append("       select * \n")
-                .append("   from content_display where page_id = :pageId and status = 1 and parent_id is null\n")
-                .append("union all\n")
-                .append("select c.*\n")
-                .append("    from n\n")
-                .append("    join content_display c on c.parent_id = n.id and c.status = 1\n")
-                .append("    )\n")
-                .append("    select * FROM n\n");
+        String query = """
+                 with recursive n as (
+                       select *\s
+                   from content_display where page_id = :pageId and status = 1 and parent_id is null
+                union all
+                select c.*
+                    from n
+                    join content_display c on c.parent_id = n.id and c.status = 1
+                    )
+                    select * FROM n
+                """;
         params.put("pageId", pageId);
-        return listQuery(query.toString(), params, ContentDisplayDTO.class)
+        return listQuery(query, params, ContentDisplayDTO.class)
                 .collectList()
-                .map(map -> {
-                    List<ContentDisplayDTO> contentDisplayDTOList = getParentContents(map);
-                    return contentDisplayDTOList;
-                });
+                .map(this::getParentContents);
     }
 
     private List<ContentDisplayDTO> getParentContents(List<ContentDisplayDTO> displayDTOS) {
-        Collections.sort(displayDTOS, (el1, el2) -> {
+        displayDTOS.sort((el1, el2) -> {
             int index1 = DataUtil.safeToInt(el1.getDisplayOrder());
             int index2 = DataUtil.safeToInt(el2.getDisplayOrder());
             return Integer.compare(index1, index2);
         });
         List<ContentDisplayDTO> response = new ArrayList<>();
-        Iterator<ContentDisplayDTO> iter = displayDTOS.iterator();
-        while (iter.hasNext()) {
-            ContentDisplayDTO contentDisplay = iter.next();
+        for (ContentDisplayDTO contentDisplay : displayDTOS) {
             List<ContentDisplayDTO> children = getChildren(contentDisplay.getId(), displayDTOS);
             contentDisplay.setContentDisplayDTOList(children);
             if (Objects.isNull(contentDisplay.getParentId())) {
@@ -64,7 +77,9 @@ public class ContentDisplayRepositoryTemplateImpl extends BaseTemplateRepository
     }
 
     private List<ContentDisplayDTO> getChildren(String parentId, List<ContentDisplayDTO> displayDTOS) {
-        return displayDTOS.stream().filter(p -> Objects.equals(p.getParentId(), parentId)).collect(Collectors.toList());
+        return displayDTOS.stream()
+                .filter(p -> Objects.equals(p.getParentId(), parentId))
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -78,9 +93,7 @@ public class ContentDisplayRepositoryTemplateImpl extends BaseTemplateRepository
         Map<String, Object> params = new HashMap<>();
         StringBuilder query = new StringBuilder();
         buildQueryComponents(query, params, request);
-        query.append("ORDER BY ").append(sorting).append(" \n")
-                .append(" LIMIT :pageSize  \n" +
-                        "OFFSET :index ");
+        query.append("ORDER BY ").append(sorting).append(" \n").append(" LIMIT :pageSize  \n" + "OFFSET :index ");
         params.put("pageSize", request.getPageSize());
         BigDecimal index = (new BigDecimal(request.getPageIndex() - 1)).multiply(new BigDecimal(request.getPageSize()));
         params.put("index", index);
@@ -100,64 +113,69 @@ public class ContentDisplayRepositoryTemplateImpl extends BaseTemplateRepository
     @Override
     public Mono<ContentDisplayDTO> getContentWithParentId(String id) {
         Map<String, Object> params = new HashMap<>();
-        StringBuilder query = new StringBuilder();
-        query.append(" with recursive n as (\n")
-                .append("       select * \n")
-                .append("   from content_display where id = :id and status = 1\n")
-                .append("union all\n")
-                .append("select c.*\n")
-                .append("    from n\n")
-                .append("    join content_display c on c.parent_id = n.id and c.status = 1 \n")
-                .append("    )\n")
-                .append("    select * FROM n order by display_order\n");
+        String query = """
+                 with recursive n as (
+                       select *\s
+                   from content_display where id = :id and status = 1
+                union all
+                select c.*
+                    from n
+                    join content_display c on c.parent_id = n.id and c.status = 1\s
+                    )
+                    select * FROM n order by display_order
+                """;
         params.put("id", id);
-        return listQuery(query.toString(), params, ContentDisplayDTO.class)
-                .switchIfEmpty(Mono.error(new BusinessException(CommonErrorCode.NOT_FOUND, "content-display.not.found")))
+        return listQuery(query, params, ContentDisplayDTO.class)
+                .switchIfEmpty(
+                        Mono.error(new BusinessException(CommonErrorCode.NOT_FOUND, "content-display.not.found")))
                 .collectList()
                 .flatMap(map -> {
                     // fix case null cua code cu
                     List<ContentDisplayDTO> contentDisplayDTOList = getParentContents(map);
-                    return (CollectionUtils.isEmpty(contentDisplayDTOList)) ? Mono.just(new ContentDisplayDTO()): Mono.just(contentDisplayDTOList.get(0));
+                    return (CollectionUtils.isEmpty(contentDisplayDTOList))
+                            ? Mono.just(new ContentDisplayDTO())
+                            : Mono.just(contentDisplayDTOList.getFirst());
                 });
     }
 
     @Override
     public Mono<List<ContentDisplayDTO>> getOriginComponentDetails(String name) {
         Map<String, Object> params = new HashMap<>();
-        StringBuilder query = new StringBuilder();
-        query.append(" with recursive n as (\n")
-                .append("       select * \n")
-                .append("   from content_display " +
-                        "where id in (select cd.id from content_display cd where cd.parent_id is null and cd.status = 1 and cd.is_original = 1 and cd.name like CONCAT('%',:name, '%') )  " +
-                        " and status = 1\n")
-                .append("union all\n")
-                .append("select c.*\n")
-                .append("    from n\n")
-                .append("    join content_display c on c.parent_id = n.id and c.status =1 \n")
-                .append("    )\n")
-                .append("    select * FROM n order by name\n");
-        params.put("name",  SQLUtils.replaceSpecialDigit(name));
-        return listQuery(query.toString(), params, ContentDisplayDTO.class)
+        String query = """
+                 with recursive n as (
+                       select *\s
+                   from content_display \
+                where id in (select cd.id from content_display cd where cd.parent_id is null and cd.status = 1 and cd.is_original = 1 and cd.name like CONCAT('%',:name, '%') )  \
+                 and status = 1
+                union all
+                select c.*
+                    from n
+                    join content_display c on c.parent_id = n.id and c.status =1\s
+                    )
+                    select * FROM n order by name
+                """;
+        params.put("name", SQLUtils.replaceSpecialDigit(name));
+        return listQuery(query, params, ContentDisplayDTO.class)
                 .collectList()
-                .map(map -> getParentContents(map));
-
+                .map(this::getParentContents);
     }
 
     @Override
     public Flux<ContentDisplay> getOldContents(String pageId) {
         Map<String, Object> params = new HashMap<>();
-        StringBuilder query = new StringBuilder();
-        query.append(" with recursive n as (\n")
-                .append("       select * \n")
-                .append("   from content_display where id IN (select pc.component_id from page_component pc where pc.page_id = :pageId )\n")
-                .append("union all\n")
-                .append("select c.*\n")
-                .append("    from n\n")
-                .append("    join content_display c on c.parent_id = n.id\n")
-                .append("    )\n")
-                .append("    select * FROM n\n");
+        String query = """
+                 with recursive n as (
+                       select *\s
+                   from content_display where id IN (select pc.component_id from page_component pc where pc.page_id = :pageId )
+                union all
+                select c.*
+                    from n
+                    join content_display c on c.parent_id = n.id
+                    )
+                    select * FROM n
+                """;
         params.put("pageId", pageId);
-        return listQuery(query.toString(), params, ContentDisplay.class);
+        return listQuery(query, params, ContentDisplay.class);
     }
 
     private void buildQueryComponents(StringBuilder builder, Map<String, Object> params, ComponentPageRequest request) {
